// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default with colors: SnackbarContent color default snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-default-11 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default with colors: SnackbarContent color error snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-error-17 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default with colors: SnackbarContent color info snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-info-28 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default with colors: SnackbarContent color success snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-success-24 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default with colors: SnackbarContent color warning snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-warning-35 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default with custom theme: SnackbarContent default with custom theme snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-default-6 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;

exports[`SnackbarContent Component Rendering should match to snapshot - SnackbarContent default: SnackbarContent default snapshot 1`] = `
<div
  className="MuiPaper-root MuiSnackbarContent-root makeStyles-default-1 MuiPaper-elevation6"
  role="alert"
>
  <div
    className="MuiSnackbarContent-message"
  />
</div>
`;
